# Wikimedia_dashboard

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  api_server.py  requirements.txt
data-engineer/: api_client.py  consumer.py  producer.py  spark_streaming.py
de/: api_client.py  consumer.py
docker/: Dockerfile.spark  compose.yml  dockerfile  dockerfile.backend  dockerfile.spark
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  Dashboard.jsx  index.css  main.jsx
frontend/src/components/: BotRatioGauge.jsx  Card.jsx  ContentChangeGauge.jsx  EventTypePieChart.jsx  EventsByTypeChart.jsx  TimeRangeSelector.jsx  TopWikiChart.jsx  TotalEventsChart.jsx
frontend/src/hooks/: useDashboardData.js
src/: api_client.py  consumer.py  producer.py  spark_streaming.py
